Almost finished with sortings

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -96,13 +96,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">@dimen/marginleft_mainlist_drawer</item>
         <item name="android:layout_marginRight">@dimen/marginright_mainlist_drawer</item>
-        <item name="android:layout_marginTop">@dimen/margintop_mainlist_drawer_text</item>
+        <item name="android:layout_marginTop">@dimen/margintop_mainlist_drawer_spinner</item>
     </style>
-    <style name="MainList.Drawer.Spinner.Filter">
-        <item name="android:layout_width">wrap_content</item>
-    </style>
+    <style name="MainList.Drawer.Spinner.Filter" />
     <style name="MainList.Drawer.DateInput">
-        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_width">@dimen/width_mainlist_drawer_dateinput</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">@dimen/marginleft_mainlist_drawer</item>
         <item name="android:layout_marginRight">@dimen/marginright_mainlist_drawer</item>
@@ -121,6 +119,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginLeft">@dimen/marginleft_mainlist_drawer</item>
         <item name="android:layout_marginTop">@dimen/margintop_mainlist_drawer_button</item>
+        <item name="android:background">@drawable/mainlist_drawer_button</item>
     </style>
     <style name="MainList.Drawer.Button.Sort"/>
     <style name="MainList.Drawer.Button.Save"/>
