--- a/app/src/main/res/layout/drawer_mainlist.xml
+++ b/app/src/main/res/layout/drawer_mainlist.xml
@@ -21,14 +21,14 @@
             style="@style/MainList.Drawer.Text.Label"
             android:text="@string/mainlist_drawer_filters_title"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textview_drawermainlist_title"/>
+            app:layout_constraintTop_toBottomOf="@+id/spinner_drawermainlist_filter"/>
 
         <Spinner
             android:id="@+id/spinner_drawermainlist_filter"
             style="@style/MainList.Drawer.Spinner.Filter"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textview_drawermainlist_title"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <Spinner
             android:id="@+id/spinner_drawermainlist_datefilter"
