--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="secondary_text">#757575</color>
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+    <color name="icon_launcher_background">#00C853</color>
 
     <!-- Цвет по умолчанию для нового элемента -->
     <color name="item_default_color">#FFC107</color>
