--- a/app/src/main/res/layout/content_edititem.xml
+++ b/app/src/main/res/layout/content_edititem.xml
@@ -26,7 +26,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
-            <EditText
+            <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_edit_item_description"
                 style="@style/EditItem.TextField"
                 android:layout_width="match_parent"
