--- a/app/src/main/res/layout/content_edititem.xml
+++ b/app/src/main/res/layout/content_edititem.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,22 +10,23 @@
     tools:showIn="@layout/activity_edititem">
 
     <android.support.constraint.ConstraintLayout
-        style="@style/EditItem.Item">
+        style="@style/EditItem.Item"
+        app:layout_constraintWidth_default="wrap">
 
         <ImageButton
             android:id="@+id/ib_edit_item_color"
             style="@style/EditItem.Icon"
             android:background="@drawable/mainlist_circle"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:contentDescription="@string/edititem_color_hint"/>
+            android:contentDescription="@string/edititem_color_hint"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/til_edit_item_description"
             style="@style/EditItem.TextInputLayout"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/et_edit_item_description"
@@ -35,6 +37,36 @@
                 android:inputType="textMultiLine" />
 
         </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:id="@+id/tv_edititem_created_label"
+            style="@style/EditItem.Date.Label"
+            android:text="@string/edititem_date_created"
+            app:layout_constraintTop_toBottomOf="@+id/til_edit_item_description"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_edititem_created_value"
+            style="@style/EditItem.Date.Value"
+            tools:text="01.01.17 11:13"
+            app:layout_constraintTop_toBottomOf="@+id/til_edit_item_description"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_edititem_modified_label"
+            style="@style/EditItem.Date.Label"
+            android:text="@string/edititem_date_modified"
+            app:layout_constraintTop_toBottomOf="@+id/tv_edititem_created_label"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_edititem_modified_value"
+            style="@style/EditItem.Date.Value"
+            tools:text="01.01.17 11:13"
+            app:layout_constraintTop_toBottomOf="@+id/tv_edititem_created_value"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="24dp"/>
 
     </android.support.constraint.ConstraintLayout>
 
