--- a/app/src/main/res/layout/content_mainlist_item.xml
+++ b/app/src/main/res/layout/content_mainlist_item.xml
@@ -18,7 +18,6 @@
         style="@style/MainList.PrimaryText"
         tools:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
@@ -28,5 +27,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_label"/>
+
+    <TextView
+        android:id="@+id/tv_item_date"
+        style="@style/MainList.Date"
+        tools:text="01.01.17 10:15"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
