--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/height_mainlist_item</item>
         <item name="android:paddingTop">@dimen/paddingtop_mainlist_item</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
     <style name="MainList.Text">
         <item name="android:layout_width">match_parent</item>
