--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,42 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources tools:keep="@color/*" xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Главные цвета приложения -->
-    <color name="primary">#4CAF50</color>
-    <color name="primary_dark">#388E3C</color>
-    <color name="primary_light">#C8E6C9</color>
-    <color name="accent">#FFC107</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#BDBDBD</color>
-    <color name="icon_launcher_background">#00C853</color>
+    <color name="primary"           >#4CAF50</color>
+    <color name="primary_dark"      >#388E3C</color>
+    <color name="primary_light"     >#C8E6C9</color>
+    <color name="accent"            >#FFC107</color>
+    <color name="primary_text"      >#212121</color>
+    <color name="secondary_text"    >#757575</color>
+    <color name="icons"             >#FFFFFF</color>
+    <color name="divider"           >#BDBDBD</color>
+    <color name="light_background"  >#FFFFFF</color>
+
+    <color name="launcher_primary"  >#00C853</color>
+    <color name="launcher_secondary">#FFFFFF</color>
 
     <!-- Цвет по умолчанию для нового элемента -->
     <color name="item_default_color">#FFC107</color>
 
-
-
     <!-- Требуется, чтобы HUE в endColor был > HUE в startColor -->
-    <color name="colorpicker_gradient_start">#EB3636</color>
-    <color name="colorpicker_gradient_end">#e91e63</color>
-    <color name="colorpicker_gradient_middle">#009688</color>
-    <color name="colorpicker_element_stroke">#ffffff</color>
+    <color name="gradient_start"    >#EB3636</color>
+    <color name="gradient_end"      >#e91e63</color>
+    <color name="gradient_middle"   >#009688</color>
+
+    <color name="circle_stroke"     >#ffffff</color>
 
     <!-- Список дополнительных цветоа на всякий случай -->
-    <color name="red">#e53935</color>
-    <color name="deep_orange">#f4511e</color>
-    <color name="orange">#fb8c00</color>
-    <color name="amber">#ffb300</color>
-    <color name="yellow">#fdd835</color>
-    <color name="lime">#cddc39</color>
-    <color name="light_green">#8bc34a</color>
-    <color name="green">#43a047</color>
-    <color name="teal">#00897b</color>
-    <color name="cyan">#00bcd4</color>
-    <color name="light_blue">#03a9f4</color>
-    <color name="blue">#1e88e5  </color>
-    <color name="indigo">#3f51b5</color>
-    <color name="deep_purple">#673ab7</color>
-    <color name="purple">#8e24aa</color>
-    <color name="pink">#e91e63</color>
+    <color name="red"               >#e53935</color>
+    <color name="deep_orange"       >#f4511e</color>
+    <color name="orange"            >#fb8c00</color>
+    <color name="amber"             >#ffb300</color>
+    <color name="yellow"            >#fdd835</color>
+    <color name="lime"              >#cddc39</color>
+    <color name="light_green"       >#8bc34a</color>
+    <color name="green"             >#43a047</color>
+    <color name="teal"              >#00897b</color>
+    <color name="cyan"              >#00bcd4</color>
+    <color name="light_blue"        >#03a9f4</color>
+    <color name="blue"              >#1e88e5  </color>
+    <color name="indigo"            >#3f51b5</color>
+    <color name="deep_purple"       >#673ab7</color>
+    <color name="purple"            >#8e24aa</color>
+    <color name="pink"              >#e91e63</color>
+
 </resources>
