--- a/app/src/main/res/layout/activity_colorpicker.xml
+++ b/app/src/main/res/layout/activity_colorpicker.xml
@@ -5,89 +5,139 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.ColorPickerActivity">
+    tools:context="com.example.mborzenkov.readlaterlist.activity.ColorPickerActivity"
+    >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_colorpicker"
-        style="@style/Toolbar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        style="@style/Toolbar"
+        />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_colorpicker"
-        tools:minHeight="@dimen/height_colorpicker_horizontalscrollview_default">
+        tools:minHeight="@dimen/height_horizontalscrollview_default"
+        >
 
         <LinearLayout
             android:id="@+id/linearLayout_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal"
+            />
+
     </HorizontalScrollView>
 
     <ImageButton
         android:id="@+id/imageButton_chosen"
-        style="@style/ColorPicker.ColoredCircle.Chosen"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_margin="@dimen/margin_circle_huge"
+        android:layout_marginTop="@dimen/marginhorizontal_normal"
+        android:onClick="clickOnChosenSquare"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
-        tools:background="@drawable/colorpicker_circle"
         app:srcCompat="@drawable/ic_check_24dp"
-        android:contentDescription="@string/colorpicker_chosen_label"/>
+        android:contentDescription="@string/colorpicker_chosen_label"
+        style="@style/ColorPicker.ColoredCircle.Chosen"
+        />
 
     <TextView
         android:id="@+id/textView_chosen"
-        style="@style/ColorPicker.Text.Chosen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/marginvertical_small"
         app:layout_constraintTop_toBottomOf="@+id/imageButton_chosen"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/colorpicker_chosen_label"
+        style="@style/Text.Primary"
+        />
 
     <LinearLayout
         android:id="@+id/linearlayout_drawermainlist_favorites"
-        style="@style/ColorPicker.LinearLayoutFavorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/marginhorizontal_normal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_chosen"
-        tools:minHeight="@dimen/height_colorpicker_horizontalscrollview_default"/>
+        tools:minHeight="@dimen/height_horizontalscrollview_default"
+        />
 
     <TextView
         android:id="@+id/textView_favorites"
-        style="@style/ColorPicker.Text.Favorites"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/marginvertical_small"
         app:layout_constraintTop_toBottomOf="@+id/linearlayout_drawermainlist_favorites"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/colorpicker_favorites_label"
+        style="@style/Text.Primary"
+        />
 
     <TextView
         android:id="@+id/textView_RGB_label"
-        style="@style/ColorPicker.Text.Label.RGB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/marginhorizontal_small"
+        android:layout_marginEnd="@dimen/marginhorizontal_small"
+        android:layout_marginTop="@dimen/marginvertical_large"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
-        app:layout_constraintRight_toLeftOf="@+id/imageButton_chosen"/>
+        app:layout_constraintRight_toLeftOf="@+id/imageButton_chosen"
+        android:text="@string/colorpicker_RGB"
+        style="@style/Text.Primary"
+        />
 
     <TextView
         android:id="@+id/textView_RGB_value"
-        style="@style/ColorPicker.Text.Value.RGB"
-        tools:text="@string/colorpicker_RGB_VAL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/marginvertical_small"
+        android:layout_marginEnd="@dimen/marginvertical_small"
+        android:layout_marginTop="@dimen/marginvertical_small"
         app:layout_constraintTop_toBottomOf="@+id/textView_RGB_label"
-        app:layout_constraintRight_toLeftOf="@+id/imageButton_chosen"/>
+        app:layout_constraintRight_toLeftOf="@+id/imageButton_chosen"
+        tools:text="@string/colorpicker_RGB_VAL"
+        style="@style/Text.Secondary"
+        />
 
     <TextView
         android:id="@+id/textView_HSV_label"
-        style="@style/ColorPicker.Text.Label.HSV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/marginhorizontal_small"
+        android:layout_marginStart="@dimen/marginhorizontal_small"
+        android:layout_marginTop="@dimen/marginvertical_large"
         app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
-        app:layout_constraintLeft_toRightOf="@+id/imageButton_chosen"/>
+        app:layout_constraintLeft_toRightOf="@+id/imageButton_chosen"
+        android:text="@string/colorpicker_HSV"
+        style="@style/Text.Primary"
+        />
 
     <TextView
         android:id="@+id/textView_HSV_value"
-        style="@style/ColorPicker.Text.Value.HSV"
-        tools:text="@string/colorpicker_HSV_VAL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/marginvertical_small"
+        android:layout_marginStart="@dimen/marginvertical_small"
+        android:layout_marginTop="@dimen/marginvertical_small"
         app:layout_constraintTop_toBottomOf="@+id/textView_HSV_label"
-        app:layout_constraintLeft_toRightOf="@+id/imageButton_chosen"/>
+        app:layout_constraintLeft_toRightOf="@+id/imageButton_chosen"
+        tools:text="@string/colorpicker_HSV_VAL"
+        style="@style/Text.Secondary"
+        />
 
 
 </android.support.constraint.ConstraintLayout>
