--- a/app/src/main/res/layout/activity_mainlist.xml
+++ b/app/src/main/res/layout/activity_mainlist.xml
@@ -6,41 +6,52 @@
     android:id="@+id/drawerlayout_mainlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.MainListActivity">
+    tools:context="com.example.mborzenkov.readlaterlist.activity.MainListActivity"
+    >
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_main_list"
-                style="@style/Toolbar" />
+                style="@style/Toolbar"
+                />
 
             <ListView
                 android:id="@+id/listview_main_list"
-                style="@style/MainList.List" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="MainList.List"
+                />
 
         </LinearLayout>
 
-        <include layout="@layout/content_mainlist_empty" />
+        <include layout="@layout/content_mainlist_empty"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_item_add"
-            style="@style/MainList.FABAdd"
-            app:srcCompat="@drawable/ic_add_24dp" />
+            android:layout_gravity="bottom|end"
+            app:srcCompat="@drawable/ic_add_24dp"
+            style="@style/FAB"
+            />
 
         <ProgressBar
             android:id="@+id/pb_main_loading"
-            android:layout_width="@dimen/size_mainlist_progressbar"
-            android:layout_height="@dimen/size_mainlist_progressbar"
             android:layout_gravity="center"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            style="@style/ProgressBarSpinning"
+            />
+
     </FrameLayout>
 
-    <include layout="@layout/drawer_mainlist" />
+    <include layout="@layout/drawer_mainlist"/>
 
 </android.support.v4.widget.DrawerLayout>
