--- a/app/src/main/res/layout/content_colorpicker_circle.xml
+++ b/app/src/main/res/layout/content_colorpicker_circle.xml
@@ -3,18 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relaviteLayout_squares"
-    android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
 
     <ImageButton
         android:id="@+id/imageButton_colored_square"
-        style="@style/ColorPicker.ColoredCircle"
-        android:background="@drawable/colorpicker_circle"
-        android:longClickable="true"
+        android:layout_width="@dimen/size_circle_huge"
+        android:layout_height="@dimen/size_circle_huge"
+        android:layout_margin="@dimen/margin_circle_huge"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        tools:ignore="ContentDescription"/>
+        tools:ignore="ContentDescription"
+        style="@style/ColorPicker.ColoredCircle.Picker"
+        />
 
 
 </RelativeLayout>
