--- a/app/src/main/res/layout/content_edititem.xml
+++ b/app/src/main/res/layout/content_edititem.xml
@@ -7,39 +7,56 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.mborzenkov.readlaterlist.activity.EditItemActivity"
-    tools:showIn="@layout/activity_edititem">
+    tools:showIn="@layout/activity_edititem"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <android.support.constraint.ConstraintLayout
-            style="@style/EditItem.Item"
-            app:layout_constraintWidth_default="wrap">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintWidth_default="wrap"
+            >
 
             <ImageButton
                 android:id="@+id/ib_edit_item_color"
-                style="@style/EditItem.Icon"
-                android:background="@drawable/mainlist_circle"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="@dimen/marginhorizontal_normal"
+                android:layout_marginStart="@dimen/marginhorizontal_normal"
+                android:layout_marginTop="@dimen/marginvertical_normal"
                 app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/circle_default_inactive"
                 android:contentDescription="@string/edititem_color_hint"
-                app:layout_constraintTop_toTopOf="parent"/>
+                />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/til_edit_item_description"
-                style="@style/EditItem.TextInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/marginhorizontal_huge"
+                android:layout_marginStart="@dimen/marginhorizontal_huge"
+                android:layout_marginRight="@dimen/marginhorizontal_normal"
+                android:layout_marginEnd="@dimen/marginhorizontal_normal"
+                android:layout_marginTop="@dimen/marginvertical_normal"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                >
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/et_edit_item_description"
-                    style="@style/EditItem.TextField"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/edititem_description_hint"
-                    android:inputType="textMultiLine" />
+                    android:inputType="textMultiLine"
+                    style="@style/EditItem.TextField"
+                    />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -50,35 +67,59 @@
             android:layout_height="60dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/til_edit_item_description">
+            app:layout_constraintTop_toBottomOf="@+id/til_edit_item_description"
+            >
 
             <TextView
                 android:id="@+id/tv_edititem_created_label"
-                style="@style/EditItem.Date.Label"
-                android:text="@string/edititem_date_created"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginvertical_small"
+                android:layout_marginLeft="@dimen/marginhorizontal_normal"
+                android:layout_marginStart="@dimen/marginhorizontal_normal"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"/>
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:text="@string/edititem_date_created"
+                style="@style/EditItem.Date"
+                />
 
             <TextView
                 android:id="@+id/tv_edititem_created_value"
-                style="@style/EditItem.Date.Value"
-                tools:text="01.01.17 11:13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginvertical_small"
+                android:layout_marginLeft="@dimen/marginhorizontal_huge"
+                android:layout_marginStart="@dimen/marginhorizontal_jumbo"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"/>
+                app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="01.01.17 11:13"
+                style="@style/EditItem.Date"
+                />
 
             <TextView
                 android:id="@+id/tv_edititem_modified_label"
-                style="@style/EditItem.Date.Label"
-                android:text="@string/edititem_date_modified"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginvertical_small"
+                android:layout_marginLeft="@dimen/marginhorizontal_normal"
+                android:layout_marginStart="@dimen/marginhorizontal_normal"
                 app:layout_constraintTop_toBottomOf="@+id/tv_edititem_created_label"
-                app:layout_constraintLeft_toLeftOf="parent"/>
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:text="@string/edititem_date_modified"
+                style="@style/EditItem.Date"
+                />
 
             <TextView
                 android:id="@+id/tv_edititem_modified_value"
-                style="@style/EditItem.Date.Value"
-                tools:text="01.01.17 11:13"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginvertical_small"
+                android:layout_marginLeft="@dimen/marginhorizontal_huge"
+                android:layout_marginStart="@dimen/marginhorizontal_jumbo"
                 app:layout_constraintTop_toBottomOf="@+id/tv_edititem_created_value"
                 app:layout_constraintLeft_toLeftOf="parent"
+                tools:text="01.01.17 11:13"
+                style="@style/EditItem.Date"
                 />
 
         </android.support.constraint.ConstraintLayout>
