--- a/app/src/main/res/layout/activity_mainlist.xml
+++ b/app/src/main/res/layout/activity_mainlist.xml
@@ -6,7 +6,7 @@
     android:id="@+id/drawerlayout_mainlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.MainListActivity"
+    tools:context="com.example.mborzenkov.readlaterlist.activity.main.MainListActivity"
     >
 
     <FrameLayout
