--- a/app/src/main/res/menu/menu_mainlist.xml
+++ b/app/src/main/res/menu/menu_mainlist.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.MainListActivity">
+    tools:context="com.example.mborzenkov.readlaterlist.activity.main.MainListActivity">
 
     <item
         android:id="@+id/mainlist_action_search"
