--- a/app/src/main/res/layout/content_edititem.xml
+++ b/app/src/main/res/layout/content_edititem.xml
@@ -64,10 +64,60 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/til_edit_item_description"
+            >
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/til_edititem_imageurl"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/marginhorizontal_normal"
+                android:layout_marginStart="@dimen/marginhorizontal_normal"
+                android:layout_marginRight="@dimen/marginhorizontal_normal"
+                android:layout_marginEnd="@dimen/marginhorizontal_normal"
+                android:layout_marginTop="@dimen/marginvertical_normal"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                >
+
+                <android.support.design.widget.TextInputEditText
+                android:id="@+id/et_edititem_imageurl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/edititem_imageurl_hint"
+                android:inputType="textWebEmailAddress"
+                style="@style/EditItem.TextField"
+                />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:minHeight="100dp"
+                android:layout_marginLeft="@dimen/marginvertical_small"
+                android:layout_marginStart="@dimen/marginvertical_small"
+                android:layout_marginRight="@dimen/marginvertical_small"
+                android:layout_marginEnd="@dimen/marginvertical_small"
+                android:layout_marginTop="@dimen/marginvertical_normal"
+                android:layout_marginBottom="@dimen/marginvertical_normal"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/til_edititem_imageurl"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:contentDescription="@string/edititem_image_contentdescription"
+                />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             >
 
             <TextView
