--- a/app/src/main/res/layout/content_edititem.xml
+++ b/app/src/main/res/layout/content_edititem.xml
@@ -76,11 +76,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/marginhorizontal_normal"
                 android:layout_marginStart="@dimen/marginhorizontal_normal"
-                android:layout_marginRight="@dimen/marginhorizontal_normal"
-                android:layout_marginEnd="@dimen/marginhorizontal_normal"
+                android:layout_marginRight="@dimen/marginhorizontal_small"
+                android:layout_marginEnd="@dimen/marginhorizontal_small"
                 android:layout_marginTop="@dimen/marginvertical_normal"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/ib_edititem_updateimage"
                 app:layout_constraintTop_toTopOf="parent"
                 >
 
@@ -95,11 +95,27 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <ImageButton
+                android:id="@+id/ib_edititem_updateimage"
+                android:layout_width="@dimen/size_edititem_ibreloadimage"
+                android:layout_height="@dimen/size_edititem_ibreloadimage"
+                android:layout_marginLeft="@dimen/marginhorizontal_normal"
+                android:layout_marginStart="@dimen/marginhorizontal_normal"
+                android:layout_marginRight="@dimen/marginhorizontal_normal"
+                android:layout_marginEnd="@dimen/marginhorizontal_normal"
+                android:layout_marginTop="@dimen/marginhorizontal_normal"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/button_refresh"
+                app:srcCompat="@drawable/ic_refresh_24dp"
+                android:contentDescription="@string/edititem_image_contentdescription"
+                />
+
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/iv_edititem_imagefromurl"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:minHeight="100dp"
+                tools:minHeight="150dp"
                 android:layout_marginLeft="@dimen/marginvertical_small"
                 android:layout_marginStart="@dimen/marginvertical_small"
                 android:layout_marginRight="@dimen/marginvertical_small"
