--- a/app/src/main/res/layout/drawer_mainlist.xml
+++ b/app/src/main/res/layout/drawer_mainlist.xml
@@ -15,14 +15,51 @@
         >
 
         <TextView
-            android:id="@+id/textview_drawermainlist_title"
+            android:id="@+id/tv_drawermainlist_user_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/marginhorizontal_normal"
             android:layout_marginStart="@dimen/marginhorizontal_normal"
             android:layout_marginTop="@dimen/marginvertical_small"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:text="@string/mainlist_user_title"
+            />
+
+        <TextView
+            android:id="@+id/tv_drawermainlist_user_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/marginhorizontal_small"
+            android:layout_marginStart="@dimen/marginhorizontal_small"
+            android:layout_marginTop="@dimen/marginvertical_small"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/tv_drawermainlist_user_label"
+            tools:text="1005931"
+            />
+
+        <TextView
+            android:id="@+id/tv_drawermainlist_user_change"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/marginhorizontal_small"
+            android:layout_marginStart="@dimen/marginhorizontal_small"
+            android:layout_marginTop="@dimen/marginvertical_small"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/tv_drawermainlist_user_value"
+            android:text="@string/mainlist_user_change"
+            style="@style/HyperLink"
+            />
+
+        <TextView
+            android:id="@+id/textview_drawermainlist_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/marginhorizontal_normal"
+            android:layout_marginStart="@dimen/marginhorizontal_normal"
+            android:layout_marginTop="@dimen/marginvertical_normal"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_drawermainlist_user_label"
             android:text="@string/mainlist_drawer_title"
             />
 
