--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,4 +59,10 @@
         <item name="android:focusable">false</item>
     </style>
 
+    <style name="HyperLink">
+        <item name="android:clickable">true</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:textSize">@dimen/size_text_small</item>
+    </style>
+
 </resources>
