--- a/app/src/main/res/layout/fragment_edititem.xml
+++ b/app/src/main/res/layout/fragment_edititem.xml
@@ -2,26 +2,24 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.EditItemActivity"
     >
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar_edit_item"
+        android:id="@+id/appbar_edititem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_edit_item"
+            android:id="@+id/toolbar_edititem"
             style="@style/Toolbar"
             />
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/til_edit_item_label"
+            android:id="@+id/til_edititem_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/marginhorizontal_huge"
@@ -34,7 +32,7 @@
             >
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/et_edit_item_label"
+                android:id="@+id/et_edititem_label"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/edititem_label_hint"
@@ -48,8 +46,8 @@
     <include layout="@layout/content_edititem"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_edit_item_save"
-        app:layout_anchor="@id/appbar_edit_item"
+        android:id="@+id/fab_edititem_save"
+        app:layout_anchor="@id/appbar_edititem"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@android:drawable/ic_menu_send"
         style="@style/FAB"
