--- a/app/src/main/res/menu/menu_edititem.xml
+++ b/app/src/main/res/menu/menu_edititem.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.mborzenkov.readlaterlist.activity.EditItemActivity">
+    tools:context="com.example.mborzenkov.readlaterlist.fragments.EditItemFragment">
     <item
         android:id="@+id/edititem_action_save"
         android:orderInCategory="1"
