--- a/app/src/main/res/drawable/circle_stroke.xml
+++ b/app/src/main/res/drawable/circle_stroke.xml
@@ -5,8 +5,7 @@
     android:shape="oval" >
 
     <solid
-        android:color="@android:color/transparent"
-        tools:color="@color/gradient_middle" />
+        android:color="@android:color/transparent"/>
 
     <stroke
         android:width="2dp"
